fixes spacing on aboutme page

--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -48,7 +48,7 @@ body {
     gap: 4vmin;
     position: absolute;
     left: 44%;
-    top: 150%;
+    top: 160%;
     transform: translate(0%, -75%);
     opacity: 1;
     z-index: 1;
